fixing nav buttons

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 			<link rel="stylesheet" href="style.css">
 		</head>
 		<nav>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/we%20are%20gaming.html?';">Homepage</button>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/Geometry%20Dash.html';">Geometry Dash</button>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/Idle%20Game.html';">My Idle Game</button>
+			<button onclick="location.href='qwerisity.github.io/redhaze/';">Homepage</button>
+			<button onclick="location.href='qwerisity.github.io/redhaze/geometry-dash/';">Geometry Dash</button>
+			<button onclick="location.href='qwerisity.github.io/redhaze/idle-game/';">My Idle Game</button>
 			<form action="">
 				<label for="test">Test:</label>
 				<input type="text" id="test">
