ok this better work now

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 			<link rel="stylesheet" href="style.css">
 		</head>
 		<nav>
-			<button onclick="href='index.html';">Homepage</button>
-			<button onclick="href='geometry-dash.html';">Geometry Dash</button>
-			<button onclick="href='idle-game.html';">My Idle Game</button>
+			<button onclick="location.href='index.html';">Homepage</button>
+			<button onclick="location.href='geometry-dash.html';">Geometry Dash</button>
+			<button onclick="location.href='idle-game.html';">My Idle Game</button>
 			<form action="">
 				<label for="test">Test:</label>
 				<input type="text" id="test">
