--- a/Idle-Game.html
+++ b/Idle-Game.html
@@ -5,9 +5,9 @@
 			<link rel="stylesheet" href="style.css">
 		</head>
 		<nav>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/we%20are%20gaming.html?';">Homepage</button>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/Geometry%20Dash.html';">Geometry Dash</button>
-			<button onclick="window.location.href='file:///C:/Users/kyleh/AppData/Roaming/Sublime%20Text%203/Packages/User/Idle%20Game.html';">My Idle Game</button>
+			<button onclick="location.href='index.html';">Homepage</button>
+			<button onclick="location.href='Geometry-Dash.html';">Geometry Dash</button>
+			<button onclick="location.href='Idle-Game.html';">My Idle Game</button>
 			<form action="">
 				<label for="test">Test: (It's better if you don't use this)</label>
 				<input type="text" id="test">
