--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		</head>
 		<nav>
 			<button onclick="location.href='index.html';">Homepage</button>
-			<button onclick="location.href='geometry-dash.html';">Geometry Dash</button>
-			<button onclick="location.href='idle-game.html';">My Idle Game</button>
+			<button onclick="location.href='Geometry-Dash.html';">Geometry Dash</button>
+			<button onclick="location.href='Idle-Game.html';">My Idle Game</button>
 			<form action="">
 				<label for="test">Test:</label>
 				<input type="text" id="test">
