quick direct fix

--- a/Idle-Game.html
+++ b/Idle-Game.html
@@ -39,6 +39,6 @@
 
 				i don't know lol
 			</details>
-			<script src="IdleClicker.js"></script>
+			<script src="Idle-Game.js"></script>
 		</footer>
 	</html>
