--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<button onclick="location.href='Geometry-Dash.html';">Geometry Dash</button>
 			<button onclick="location.href='Idle-Game.html';">My Idle Game</button>
 			<form action="">
-				<label for="test">Test:</label>
+				<label for="test">Test: (It's better if you don't use this)</label>
 				<input type="text" id="test">
 				<input type="submit" value="Submit">
 			</form>
