--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<title>RedHaze</title>
 		</head>
 		<nav>
-			<button onclick="location.href='Main-Page.html';">Homepage</button>
+			<button onclick="location.href='index.html';">Homepage</button>
 			<button onclick="location.href='Geometry-Dash.html';">Geometry Dash</button>
 			<button onclick="location.href='Idle-Game.html';">My Idle Game</button>
 			<form action="">
